First commit to project build

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
   <app-root></app-root>
+  
+  <!--<script type="text/javascript" src="assets/scripts/custom.js"></script>-->
+  
 </body>
 </html>
